Update treck traffic app

--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
     "node-schedule": "^2.1.0",
     "pug": "^3.0.2",
     "xlsx": "^0.18.5"
+  },
+  "engines": {
+    "node": "16.14.2"
   }
+
 }
