--- a/package.json
+++ b/package.json
@@ -18,9 +18,8 @@
     "node-schedule": "^2.1.0",
     "pm2": "^5.2.0",
     "pug": "^3.0.2",
+    "sequelize": "^6.28.0",
+    "sqlite3": "^5.1.4",
     "xlsx": "^0.18.5"
-  },
-  "engines": {
-    "node": "16.14.2"
   }
 }
